c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/goto_label.c
int main(void) {
    goto label;
    return 0;
label:
    return 1;
}