c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/extra_credit/kw_label.c
int main(void) {
    return: return 0;
}